# cpuminer-opt

./: .RELEASE_NOTES.swp  .gitignore  .travis.yml  AUTHORS  Android.mk  DGB.yml  DOGE.yml  Dockerfile  Dockerfile.alpine  INSTALL_LINUX  INSTALL_WINDOWS  Makefile.am  NEWS  README.md  README.txt  RELEASE_ANNOUNCEMENT  RELEASE_NOTES  SSE2NEON.h  aclocal.m4  algo-gate-api.c  algo-gate-api.h  api.c  arm-build.sh  armbuild-all.sh  autogen.sh  avxdefs.h  bitbucket.yml  bitcoin-config.h  build-4way.sh  build-allarch.sh  build-armv8.sh  build-avx2.sh  build-msys2.sh  build-no-common.sh  build.sh  buildjdd.sh  clean-all.sh  compat.h  config-template.json  configure  (+25 more)
.circleci/: config.yml
.github/workflows/: build.yml  docker-publish.yml  main.yml
algo/: axiom.c  drop.c  fresh.c  hmq1725.c  lbry.c  m7m.c  m7m.c.old  neoscrypt.c  neoscrypt.c.broke  nist5.c  pluck.c  s3.c  scrypt.c  sha256t.c  skunk.c  timetravel.c  timetravel10.c  tribus.c  veltor.c  xevan.c  zr5.c
algo/argon2/: argon2a.c
algo/argon2d/: argon2d-gate.c  argon2d-gate.h
algo/blake/: blake-4way.c  blake-gate.c  blake-gate.h  blake-hash-4way.c  blake-hash-4way.h  blake.c  blake2.c  blake256-hash-4way.c  blake256-hash-4way.c.new  blake256-hash.c  blake256-hash.h  blake2b-4way.c  blake2b-gate.c  blake2b-gate.h  blake2b-hash-4way.c  blake2b-hash-4way.h  blake2b-hash.c  blake2b-hash.h  blake2b.c  blake2s-4way.c  blake2s-gate.c  blake2s-gate.h  blake2s-hash-4way.c  blake2s-hash-4way.h  blake2s-hash.c  blake2s-hash.h  blake2s.c  blake512-hash-4way.c  blake512-hash.c  blake512-hash.h  blakecoin-4way.c  blakecoin-gate.c  blakecoin-gate.h  blakecoin.c  decred-4way.c  decred-gate.c  decred-gate.h  decred.c  mod_blakecoin.c  pentablake-4way.c  (+9 more)
algo/bmw/: bmw-hash-4way.c  bmw-hash-4way.h  bmw.test  bmw256-hash-4way.c  bmw256.c  bmw512-4way.c  bmw512-gate.c  bmw512-gate.h  bmw512-hash-4way.c  bmw512.c  sph_bmw.c  sph_bmw.h
algo/cpunet/: cpunet-gate.c  cpunet-gate.h
algo/cryptonight/: cryptolight.c  cryptonight-aesni.c  cryptonight-common.c  cryptonight.c  cryptonight.h
algo/cubehash/: cube-hash-2way.c  cube-hash-2way.c.save  cube-hash-2way.h  cubehash_sse2.c  cubehash_sse2.h  sph_cubehash.h
algo/echo/: echo-hash-4way.c  echo-hash-4way.h  sph_echo.c  sph_echo.h
algo/fugue/: fugue-aesni.c  fugue-aesni.h  sph_fugue.h
algo/gost/: sph_gost.c  sph_gost.h
algo/gr/: gr-gate.c  gr-gate.h
algo/groestl/: groestl-4way.c  groestl-gate.c  groestl-gate.h  groestl.c  groestl256-hash-4way.c  groestl256-hash-4way.h  groestl256-intr-4way.h  groestl512-hash-4way.c  groestl512-hash-4way.h  groestl512-intr-4way.h  myr-groestl.c  myrgr-4way.c  myrgr-gate.c  myrgr-gate.h  sph_groestl.c  sph_groestl.h
algo/hamsi/: hamsi-hash-4way.c  hamsi-hash-4way.h  hamsi-helper-4way.c  sph_hamsi.c.test  sph_hamsi.h
algo/haval/: haval-16way-helper.c  haval-4way-helper.c  haval-8way-helper.c  haval-hash-4way.c  haval-hash-4way.h  haval-helper.c  haval.c  sph-haval.h
algo/heavy/: bastion.c  heavy.c  sph_hefty1.c  sph_hefty1.h
algo/hodl/: aes.c  block.h  common.h  hash.cpp  hash.h  hmac_sha512.cpp  hodl-endian.h  hodl-gate.c  hodl-gate.h  hodl-wolf.c  hodl-wolf.h  hodl.cpp  hodl.h  hodl_arith_uint256.cpp  hodl_uint256.cpp  hodlminer.1  my-endian.h  serialize.h  sha256.cpp  sha512-avx.h  sha512.cpp  sha512_avx.c  sha512_avx2.c  utilstrencodings.cpp  wolf-aes.h
algo/jh/: jh-hash-4way.c  jh-hash-4way.h  jha-4way.c  jha-gate.c  jha-gate.h  jha.c  sph_jh.c  sph_jh.h
algo/keccak/: keccak-4way.c  keccak-gate.c  keccak-gate.h  keccak-hash-4way.c  keccak-hash-4way.c.bak  keccak-hash-4way.h  keccak-macros.c  keccak.c  sha3d-4way.c  sha3d.c  sph_keccak.c  sph_keccak.c.bak  sph_keccak.h
algo/lanehash/: lane.c  lane.h
algo/luffa/: luffa-hash-2way.c  luffa-hash-2way.c.save  luffa-hash-2way.h  luffa-hash-2way.h.save  luffa.c  luffa_for_sse2.c  luffa_for_sse2.h  sph_luffa.c  sph_luffa.h
algo/lyra2/: allium-4way.c  allium-gate.c  allium-gate.h  allium.c  allium.c.broke  lyra2-gate.c  lyra2-gate.h  lyra2-hash-2way.c  lyra2.c  lyra2.h  lyra2h-4way.c  lyra2h-gate.c  lyra2h-gate.h  lyra2h.c  lyra2re.c  lyra2rev2-4way.c  lyra2rev2-gate.c  lyra2rev2-gate.h  lyra2rev2.c  lyra2rev3-4way.c  lyra2rev3.c  lyra2z-4way.c  lyra2z-gate.c  lyra2z-gate.h  lyra2z.c  lyra2z330.c  phi2-4way.c  phi2.c  sponge-2way.c  sponge.c  sponge.c.bak  sponge.h  zcoin.c  zoin.c
algo/m7m/: m7m.c
algo/neoscrypt/: neoscrypt.c
algo/nist5/: nist5-4way.c  nist5-gate.c  nist5-gate.h  nist5.c  zr5.c
algo/odo/: KeccakP-800-SnP.h  KeccakP-800-reference.cpp  odo.cpp  odocrypt.cpp  odocrypt.h
algo/panama/: panama-hash-4way.c  panama-hash-4way.h  sph_panama.h
algo/polytimos/: polytimos-gate.c  polytimos-gate.h  polytimos.c  polytimos.c.broke
algo/quark/: anime-4way.c  anime-gate.c  anime-gate.h  anime.c  hmq1725-4way.c  hmq1725-gate.c  hmq1725-gate.h  hmq1725.c  quark-4way.c  quark-gate.c  quark-gate.h  quark.c
algo/qubit/: deep-2way.c  deep-gate.c  deep-gate.h  deep.c  qubit-2way.c  qubit-gate.c  qubit-gate.h  qubit.c
algo/radiogatun/: sph_radiogatun.c  sph_radiogatun.h
algo/ripemd/: lbry-4way.c  lbry-gate.c  lbry-gate.h  lbry.c  (+4 more)
api/: index.php  local-sample.php  websocket.htm
asm/: aesb-x64.S  aesb-x86.S  neoscrypt_asm.S  neoscrypt_asm.S.broke  scrypt-arm.S  scrypt-x64.S  scrypt-x86.S  sha2-arm.S  sha2-x64.S  sha2-x86.S
compat/: aes_helper.c  gettimeofday.c  gmp.h.del  inttypes.h  sha3-defs.h  unistd.h  winansi.c  winansi.h
compat/jansson/: .gitignore  Makefile.am  config.h  configure.ac  jansson.h  jansson_config.h  util.h
crypto/: aesb.c  blake2s.c  blake2s.h  c_blake256.c  c_jh.c  c_keccak.c  hash-ops.h  hash.c  int-util.h  magimath.cpp  magimath.h  oaes_lib.c  skein_port.h
junk/: cpuminer.nsi  cpuminer.sln  cpuminer.vcxproj.filters
res/: cpuminer.rc  icon.rc  resource.h
simd-utils/: intrlv-avx.h  intrlv-avx2.h  intrlv-avx512.h  intrlv-mmx.h  intrlv-selector.h  intrlv-sse2.h  intrlv.h  simd-128.h  simd-256.h  simd-512.h  simd-64.h  simd-avx.h  simd-avx2.h  simd-avx512.h  simd-constants.c  simd-int.h  simd-mmx.h  simd-neon.h  simd-sse2.h  simd-sve.h  simd-types.h
(+445 files in other folders)
