
noinst_LIBRARIES = libjansson.a

libjansson_a_SOURCES = \
  config.h \
  dump.c \
  error.c \
  hashtable.c hashtable.h \
  jansson.h \
  jansson_config.h \
  jansson_private.h \
  load.c \
  memory.c \
  pack_unpack.c \
  strbuffer.c strbuffer.h \
  strconv.c \
  utf.c utf.h \
  util.h \
  value.c

